--- a/ApiTestingDemo/ApiTestingDemo.csproj
+++ b/ApiTestingDemo/ApiTestingDemo.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="NUnit.Analyzers" Version="3.9.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
     <PackageReference Include="RestSharp" Version="112.1.0" />
+    <PackageReference Include="UglyToad.PdfPig" Version="1.7.0-custom-5" />
   </ItemGroup>
 
   <ItemGroup>
